# libjessevdk

./: .gitignore  Makefile.am  configure.ac  libjessevdk.pc.in  reinstall.sh
base/: .gitignore  Makefile.am  base.hh  configure.ac  jessevdk-base.pc.in  libjessevdk-base.pc.in
base/Algorithms/: algorithms.hh
base/BinaryStream/: binarystream.cc  binarystream.hh  binarystream.ih  datadestructor.cc
base/Cloneable/: cloneable.hh
base/CommandLine/: argument.cc  commandline.hh  commandline.ih  initialize.cc  instance.cc  option1.cc  option3.cc  optionindex.cc  parsearguments.cc  parsenumoptions.cc  parseoptions.cc
base/Config/: config.cc  config.hh  config.ih  read.cc
base/Debug/: debug.cc  debug.hh  debug.ih  debug1.cc  disable.cc  enable.cc  enable1.cc  enableenvironment1.cc  enableenvironment2.cc
base/Enum/: enum.hh
base/Exceptions/: exceptions.hh
base/Flags/: flags.hh
base/Functional/: memcb.hh
base/Math/: math.hh  random.hh
base/Module/: destructor.cc  module.cc  module.hh  module1.cc  open.cc  resolvepath.cc  statics.cc
base/Object/: addprivatedata.cc  copy.cc  data.cc  datadestroy.cc  destroy.cc  dispose.cc  disposing.cc  object.hh  object.ih  privatedataoffset.cc  privatedataref.cc  privatedataunref.cc
base/Properties/: getproperties.cc  hasproperty.cc  properties.hh
base/Random/: random.hh
base/String/: endswith.cc  hex.cc  lstrip.cc  operatordouble.cc  replace.cc  rstrip.cc  split.cc  startswith.cc  string.hh
base/Timer/: mark.cc  seconds.cc  since1.cc  timer.cc  timer.hh  timer.ih
base/base/: base.hh
db/: Makefile.am  autogen.sh  configure.ac  db.hh  libjessevdk-db.pc.in
db/SQLite/: begin.cc  commit.cc  datadestructor.cc  query.cc  rollback.cc  serialize1.cc  serialize2.cc  serialize4.cc  setsynchronous.cc  sqlite.ih  sqlite1.cc
jessevdk/: Makefile.am  jessevdk.hh
jessevdk/base/: Makefile.am  algorithms.hh  base.hh  binarystream.cc  binarystream.hh  cloneable.hh  config.cc  config.hh  debug.cc  debug.hh  enum.hh  flags.hh  functional.hh  object.cc  object.hh  properties.hh  signals.hh  string.cc  string.hh  timer.cc  timer.hh
jessevdk/db/: Makefile.am  db.hh  sqlite.hh
jessevdk/math/: Makefile.am  mat.hh  math.cc  math.hh  operators.hh  random.hh  types.hh  vec.hh
jessevdk/network/: Makefile.am  addressinfo.cc  addressinfo.hh  client.cc  client.hh  network.hh  server.cc  server.hh  socket.cc  socket.hh  socketaddress.cc  socketaddress.hh  tcpserver.cc  tcpserver.hh  udpserver.cc  udpserver.hh  unixserver.cc  unixserver.hh
jessevdk/os/: Makefile.am  environment.cc  environment.hh  fifo.cc  fifo.hh  filedescriptor.cc  filedescriptor.hh  filesystem.cc  filesystem.hh  module.cc  module.hh  os.hh  pipe.cc  pipe.hh  processes.cc  processes.hh  signals.cc  signals.hh  terminator.cc  terminator.hh
math/: Makefile.am  ccResolutions  configure.ac  libjessevdk-math.pc.in  mat.hh  math.cc  math.hh  math.ih  operators.hh  test.cc  types.hh  vec.hh
math/Random/: random.hh
math/math/: operators.hh
math/sse/: float4.hh  float4.ih  float4impl.hh  float4implsse.hh  implementation.hh  statics.cc
network/: Makefile.am  autogen.sh  configure.ac  connection.cpp  connection.hpp  jessevdk-network.pc.in  libjessevdk-network.pc.in  network.hh
network/AddressInfo/: addressinfo.hh  addressinfo.ih  addressinfo1.cc  addressinfo2.cc  addressinfo4.cc  addressinfo5.cc  datadestructor.cc  hint.cc  initialize.cc  ismulticast.cc  next.cc  parse.cc  resolve.cc  split.cc  tcp1.cc
network/Client/: client.hh  client.ih  client1.cc  client2.cc  client3.cc  client4.cc  connect.cc  multicast1.cc  multicast2.cc  resolve.cc  tcp1.cc  tcp2.cc  udp1.cc  udp2.cc  unix.cc
network/Connection/: connection.hh  connection.ih  connection1.cc  connection2.cc  connection3.cc  dataclose.cc  dataconstructor1.cc  dataconstructor2.cc  dataonio.cc  dataonsocketclosed.cc  setdata.cc  setsocket.cc
network/Message/: message.cc  message.hh  message.ih
network/Server/: close.cc  dataclose.cc  datadestructor.cc  dataonaccept.cc  dataonconnectionclosed.cc  dataonlistenclosed.cc  initialize.cc  installclosedhandler.cc  listen.cc  onaccept.cc  onconnectionclosed.cc  server.cc  server.hh  server.ih  setdata.cc  socketfrominfo.cc
network/Socket/: bind.cc  connect.cc  dataclose.cc  datawrite.cc  datawritedgram.cc  datawritestream.cc  readdgram.cc  readstream.cc  setdata.cc  setinfo.cc  setoption.cc  socket.hh  socket.ih  socket1.cc  socket2.cc  socket3.cc  socket4.cc
network/SocketAddress/: host.cc  port.cc  socketaddress.hh  socketaddress.ih  socketaddress1.cc  socketaddress2.cc
network/TcpClient/: connect1.cc  connect2.cc  connectaddressinfo.cc  initialize.cc  tcpclient.hh  tcpclient.ih  tcpclient1.cc  tcpclient2.cc  tcpclient3.cc
network/TcpConnection/: dataclose.cc  dataconstructor1.cc  dataconstructor2.cc  dataonsocketclosed.cc  tcpconnection.hh  tcpconnection.ih  tcpconnection1.cc  tcpconnection2.cc  write.cc  writeline.cc
network/TcpServer/: accept.cc  close.cc  connection.cc  dataaccept.cc  dataclose.cc  datadestructor.cc  initialize.cc  listen.cc  listenaddressinfo.cc  onaccept.cc  onconnectionclosed.cc  set1.cc  set3.cc  set4.cc  tcpserver.hh  tcpserver.ih  tcpserver1.cc  tcpserver2.cc  tcpserver3.cc  tcpserver4.cc
network/UdpServer/: accept.cc  connection.cc  dataaccept.cc  datarecv.cc  enablebroadcast.cc  initialize.cc  installiohandler.cc  listen.cc  listenaddressinfo.cc  listenonsocket.cc  set1.cc  set4.cc  setupbroadcast.cc  socketclone.cc  socketfrominfo.cc  socketsocket1.cc  socketsocket2.cc  udpserver.hh  udpserver.ih  udpserver1.cc  udpserver2.cc  udpserver3.cc  udpserver4.cc
network/UnixClient/: connectaddressinfo.cc  unixclient.cc  unixclient.hh  unixclient.ih
network/UnixServer/: accept.cc  close.cc  dataaccept.cc  dataclose.cc  datadestructor.cc  listenaddressinfo.cc  listenonsocket.cc  set.cc  unixserver.cc  unixserver.hh  unixserver.ih
os/: Makefile.am  configure.ac  jessevdk-os.pc.in  libjessevdk-os.pc.in
os/Environment/: all.cc  convert.cc  environment.hh  environment.ih  path.cc  variable1.cc
os/Fifo/: close.cc  create.cc  fifo.hh  (+3 more)
(+314 files in other folders)
