AC_INIT(libjessevdk-db, 0.1)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_CONFIG_MACRO_DIR([m4])
AC_PROG_LIBTOOL

AC_ISC_POSIX
AC_STDC_HEADERS
AC_PROG_CXX
AC_HEADER_STDC

AC_PROG_INSTALL
AC_PROG_MAKE_SET

LIBJESSEVDK_DB_API_VERSION=0.1
AC_SUBST(LIBJESSEVDK_DB_API_VERSION)

pkgincludedir="$includedir/libjessevdk-$LIBJESSEVDK_DB_API_VERSION/db"
AC_SUBST(pkgincludedir)

pkgbasedir=""
AC_SUBST(pkgbasedir)

PKG_CHECK_MODULES(PACKAGE_DB, [
	libjessevdk-base-0.1
	sqlite3
])

AC_SUBST(PACKAGE_DB_CFLAGS)
AC_SUBST(PACKAGE_DB_LIBS)

AC_OUTPUT(
Makefile
db/SQLite/Row/Makefile
db/SQLite/Makefile
db/Makefile

libjessevdk-db.pc
)
