AC_INIT(jessevdk-network, 0.1)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_CONFIG_MACRO_DIR([m4])
AC_PROG_LIBTOOL

AC_ISC_POSIX
AC_STDC_HEADERS
AC_PROG_CXX
AC_HEADER_STDC

AC_PROG_INSTALL
AC_PROG_MAKE_SET

JESSEVDK_NETWORK_API_VERSION=0.1
AC_SUBST(JESSEVDK_NETWORK_API_VERSION)

pkgincludedir="$includedir/jessevdk-$JESSEVDK_NETWORK_API_VERSION/network"
AC_SUBST(pkgincludedir)

pkgbasedir=""
AC_SUBST(pkgbasedir)

PKG_CHECK_MODULES(PACKAGE_NETWORK, [
	jessevdk-base-0.1
	jessevdk-os-0.1
	glibmm-2.4
])

AC_SUBST(PACKAGE_NETWORK_CFLAGS)
AC_SUBST(PACKAGE_NETWORK_LIBS)

AC_OUTPUT(

jessevdk-network.pc
)
