SUBDIRS = exceptions functional properties signals

headerdir = $(pkgincludedir)/base
header_DATA = \
	algorithms.hh \
	base.hh \
	binarystream.hh \
	cloneable.hh \
	config.hh \
	debug.hh \
	enum.hh \
	exceptions.hh \
	flags.hh \
	functional.hh \
	properties.hh \
	signals.hh \
	object.hh \
	string.hh \
	timer.hh

EXTRA_DIST = \
	$(header_DATA)
